MD Settings: drop confusing "Enable guest browsing" secondary text

R=tommycli@chromium.org
BUG=653501
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2510953003
Cr-Commit-Position: refs/heads/master@{#432932}

Former-commit-id: f657b97e7d7bebd7e37d615c827806fa692b4579